--- a/domains/App/AppFooter/AppFooter.scss
+++ b/domains/App/AppFooter/AppFooter.scss
@@ -1,6 +1,7 @@
 @import 'assets/scss/main';
 
 .app-footer {
+  font-size: 18px;
   padding: 14px 24px;
   font-weight: 700;
   background: $color-secondary;
